force-app/main/default/objects/CRADA_Attachment__c/CRADA_Attachment__c.object-meta.xml
<CustomObject>
    <description>An attachments object to replace the standard attachments object in Salesforce, to allow for attachment types with CRADA Attachments.</description>
    <label>CRADA Attachment</label>
    <nameField>
        <label>Attachments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRADA Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>