force-app/main/default/objects/CRADA_Attachment__c/fields/Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Type__c</fullName>
    <label>Attachment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appendix A</fullName>
            </value>
            <value>
                <fullName>Appendix B</fullName>
            </value>
            <value>
                <fullName>Appendix C</fullName>
            </value>
            <value>
                <fullName>Appendix D</fullName>
            </value>
            <value>
                <fullName>Appendix E</fullName>
            </value>
            <value>
                <fullName>Conflict of Interest Form</fullName>
            </value>
            <value>
                <fullName>CRADA Agreement</fullName>
            </value>
            <value>
                <fullName>CRADA Agreement Amendment</fullName>
            </value>
            <value>
                <fullName>CRADA Agreement Fully Executed</fullName>
            </value>
            <value>
                <fullName>HQ Foreign Approval</fullName>
            </value>
            <value>
                <fullName>Joint Work Statement</fullName>
            </value>
            <value>
                <fullName>OSTI Final Report and Confirmation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PSO Foreign Approval</fullName>
            </value>
            <value>
                <fullName>SC Analysis Worksheet</fullName>
            </value>
            <value>
                <fullName>SC Foreign Approval</fullName>
            </value>
            <value>
                <fullName>Sponsor Registration Form</fullName>
            </value>
            <value>
                <fullName>WAS Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>