force-app/main/default/objects/CRADA_Attachment__c/fields/CRADA__c.field-meta.xml
<CustomField>
    <fullName>CRADA__c</fullName>
    <label>CRADA</label>
    <referenceTo>CRADA__c</referenceTo>
    <relationshipName>Attachments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>