force-app/main/default/objects/CRADA_Attachment__c/fields/view_CRADA_doc__c.field-meta.xml
<CustomField>
    <fullName>view_CRADA_doc__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + AttachmentId__c ,&quot;CLICK HERE TO VIEW&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Link</label>
    <type>Text</type>
</CustomField>